restaurant page done

--- a/javascript/restaurant-page/src/template.html
+++ b/javascript/restaurant-page/src/template.html
@@ -7,8 +7,12 @@
   </head>
   <body>
     <header>
-      <nav></nav>
+      <nav>
+        <button type="button" id="home">HOME</button>
+        <button type="button" id="menu">MENU</button>
+        <button type="button" id="contact">CONTACT</button>
+      </nav>
+      <div id="content"></div>
     </header>
-    <div id="content"></div>
   </body>
 </html>
